# delay-encryption-in-halo2

./: .gitignore  Cargo.toml  README.md
benches/: README.md  delay_enc.rs  mod_pow.rs  pose_enc.rs  poseidon.rs  poseidon_encryption.rs
benches/data/: params_pose_enc_11  proof_mod_pow_17  proof_pose_enc_11
src/: lib.rs  lib.rs_old  lib.rs_old2
src/big_integer/: chip.rs  instructions.rs  mod.rs  utils.rs
src/encryption/: bn256_msg_info.rs  chip.rs  instructions.rs  mod.rs  poseidon.rs  poseidon_enc.rs
src/encryption2/: chip.rs
src/hash/: chip.rs  hasher.rs  mod.rs  poseidon.rs  transcript.rs
src/hash/gadget/: hasher.rs  mod.rs  transcript.rs
src/poseidon/: chip.rs  grain.rs  matrix.rs  mod.rs  permutation.rs  poseidon.rs  pow5.rs  primitives.rs  spec.rs
src/poseidon/gadget/: mod.rs  poseidon.rs  pow5.rs
src/poseidon/gadget/primitives/: p128pow5t3.rs
src/poseidon/gadget/utilities/: decompose_running_sum.rs
src/poseidon/primitives/: fp.rs  fq.rs  grain.rs  mds.rs  p128pow5t3.rs
src/poseidon/utilities/: cond_swap.rs  decompose_running_sum.rs  lookup_range_check.rs  mod.rs
src/rsa/: chip.rs  instructions.rs  mod.rs
src/rsa/big_uint/: chip.rs
