[package]
name = "delay-encryption-in-halo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Halo2
halo2wrong = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", version = "0.1.0", rev = "63bde545d934e69c806ef9bc8b18f03f6ec0fe8e" }
maingate = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", version = "0.1.0", rev = "63bde545d934e69c806ef9bc8b18f03f6ec0fe8e" }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves.git', tag = '0.3.2' }
halo2_proofs = { version = "0.2.0", git = "https://github.com/privacy-scaling-explorations/halo2" }

halo2_gadgets = {version = "0.2.0", git = "https://github.com/privacy-scaling-explorations/halo2", features = ["dev-graph", "test-dependencies"]}

ecc = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", version = "0.1.0", rev = "63bde545d934e69c806ef9bc8b18f03f6ec0fe8e" }


ff = { version = "0.13", features = ["bits"] }
group = "0.13"
subtle = "2.3"  #sinsemilla - primitives
bitvec = "1" #poseidon - gadget - primitives - grain
# Math
num-bigint = { version = "0.4", features = ["rand"] }

[dev-dependencies]
rand = "0.8.5"
rsa = "0.6.1"
rand_core = {version = "0.6", default-features = false}
paste = "1.0.7"
proptest = "1.0.0"
uint = "0.9.2" # MSRV 1.56.1
# gadget/pow5

# utilities