[package]
name = "halo2_delay_enc"
version = "0.1.0"
edition = "2021"
description = "Delay Encryption circuit in halo2."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Halo2
maingate = {git = "https://github.com/privacy-scaling-explorations/halo2wrong", tags = "v2023_04_20" }
halo2wrong = {git = "https://github.com/privacy-scaling-explorations/halo2wrong", tags = "v2023_04_20"}

# Big-integer
num-bigint = { version = "0.4", features = ["rand"] }
ff = "0.13"

[dev-dependencies]
rand = "0.8.5"