[package]
name = "halo2_delay_enc"
version = "0.1.0"
edition = "2021"
description = "Delay Encryption circuit in halo2."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Halo2
maingate = {git = "https://github.com/privacy-scaling-explorations/halo2wrong", tags = "v2023_04_20" , default-features = false }
halo2wrong = {git = "https://github.com/privacy-scaling-explorations/halo2wrong", tags = "v2023_04_20" , default-features = false }
halo2 = { package = "halo2_proofs", git = "https://github.com/privacy-scaling-explorations/halo2", tags ="v2023_04_20" }
ecc = {git = "https://github.com/privacy-scaling-explorations/halo2wrong", tags = "v2023_04_20"}
halo2_gadgets = { package = "halo2_gadgets", git = "https://github.com/privacy-scaling-explorations/halo2", tags ="v2023_04_20" }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves.git', tag = '0.3.2' }

# Big-integer
num-bigint = { version = "0.4", features = ["rand"] }
ff = "0.13"
group = "0.13"
subtle = { version = "2.3", default-features = false }
# Feature
bitvec = "1"
rand_core = { version = "0.6", default-features = false }

[dev-dependencies]
rand = "0.8.5"
rand_core = { version = "0.6", default-features = false }
rsa = "0.6.1"
sha2 = "0.10.6"
paste = "1.0.7"
proptest = "1.0.0"  #proptest = {version = "1.0.0", optional = true}
uint = "0.9.2"  # MSRV 1.56.2 ??

[lib]
doctest = false

